--- a/style.css
+++ b/style.css
@@ -1,3 +1,70 @@
+/* Common
+----------------------------------------------------------- */
+
 body {
   font-family: sans-serif;
+}
+
+img {
+  max-width: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+.container {
+  max-width: 960px;
+}
+
+/* header
+--------------------------------------------------------- */
+
+header {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  align-items: center;
+  height: 130px;
+  margin: 0 auto;
+  padding: 0 32px;
+}
+
+header h1 {
+  font-size: 32px;
+  font-weight: normal;
+}
+
+header ul {
+  display: flex;
+}
+
+header li {
+  margin-right: 16px;
+}
+
+header li a {
+  color: #000;
+}
+
+header li a:hover {
+  opacity: 0.7;
+}
+
+/* Main-visual
+------------------------------------------------------------- */
+
+.main-visual {
+  margin-bottom: 60px;
+}
+
+.main-visual img {
+  width: 100%;
+  max-width: 1920px;
+  height: 480px;
+  object-fit: cover;
 }
