--- a/css/style.css
+++ b/css/style.css
@@ -101,3 +101,144 @@ header li a:hover {
 
 /* Works
 -------------------------------------------------------- */
+
+#works {
+  margin-bottom: 120px;
+}
+
+#works p {
+  font-size: 0.8rem;
+  text-align: center;
+  margin-top: 16px;
+}
+
+#works .grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  gap: 16px;
+}
+
+#works .works-item a:hover {
+  opacity: 0.7;
+}
+
+/* Contact
+---------------------------------------------------------------- */
+
+#contact dl {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+#contact dt {
+  width: 15%;
+}
+
+#contact dd {
+  width: 85%;
+  margin-bottom: 10px;
+}
+
+#contact dd input,
+#contact dd textarea {
+  width: 100%;
+  border: 1px solid #c8c8c8;
+  padding: 10px;
+}
+
+#contact dd textarea {
+  height: 10rem;
+}
+
+#contact .button {
+  text-align: center;
+}
+
+#contact .button input {
+  width: 200px;
+  background-color: #24292e;
+  color: #fff;
+  font-size: 0.5rem;
+  padding: 15px 0;
+  border: 1px solid #24292e;
+}
+
+#contact .button input:hover {
+  background-color: #fff;
+  color: #24292e;
+}
+
+/* Footer
+---------------------------------------------------- */
+
+#footer {
+  margin-top: 32px;
+  padding: 16px;
+  text-align: center;
+  background-color: #eee;
+}
+
+#footer p {
+  font-size: 0.725rem;
+}
+
+/* Media
+----------------------------------------------------- */
+
+@media screen and (max-width: 600px) {
+  /* Header */
+
+  header {
+    max-width: 100%;
+    height: auto;
+    flex-direction: column;
+  }
+  
+  header h1 {
+    margin-top: 32px;
+  }
+
+  header ul {
+    margin-top: 16px;
+  }
+
+  header li {
+    font-size: 16px;
+  }
+
+  header li:last-child {
+    margin-right: 0;
+  }
+
+  /* Mainvisual */
+
+  .main-visual {
+    margin-top: 24px;
+    margin-bottom: 60px;
+  }
+
+  .main-visual img {
+    object-fit: fill;
+    height: auto;
+  }
+
+  /* About */
+
+  #about {
+    margin-bottom: 60px;
+  }
+  
+  #about .flex{
+    flex-direction: column;
+  }
+
+  #about .icon {
+    text-align: center;
+    margin-bottom: 8px;
+  }
+
+  #about .icon img {
+    margin-right: 0;
+  }
+}
